# fast-auth

./: Cargo.toml  README.md  fast-auth.toml
docs/: openapi.yml
sdk/: README.md  eslint.config.mjs  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
sdk/react/: README.md  eslint.config.mjs  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
sdk/react/src/: config.ts  context.tsx  index.ts  server.ts
sdk/src/: config.ts  index.ts  server.ts
src/: api_key.rs  backend.rs  config.rs  cookies.rs  email.rs  email_sender.rs  error.rs  extractors.rs  lib.rs  middleware.rs  openapi.rs  password.rs  tokens.rs  verification.rs  verification_email.rs
src/handlers/: api_keys.rs  email.rs  me.rs  mod.rs  organizations.rs  password.rs  refresh.rs  sign_in.rs  sign_out.rs  sign_up.rs
src/testing/: access_and_refresh.rs  api_keys.rs  mod.rs  organizations.rs  protected_route.rs  sign_in.rs  sign_out.rs  sign_up.rs  verification.rs
src/testing/organizations/: basics.rs  invites.rs  mod.rs  permissions.rs
tests/: list.rs
