[package]
name = "fast-auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "A simple, extensible authentication library for Axum with JWT and refresh tokens"
repository = "https://github.com/francis2tm/fast-auth"
keywords = ["auth", "authentication", "axum", "jwt", "web"]
categories = ["authentication", "web-programming"]
readme = "README.md"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["rt", "time"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", default-features = false, features = [
    "rust_crypto",
] }
argon2 = "0"
rand = "0"
sha2 = "0"
hex = "0"
chrono = { version = "0", features = ["serde"] }
time = "0"
uuid = { version = "1", features = ["v4", "serde"] }
email_address = "0"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0"
