[package]
name = "fast-auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "A simple, extensible authentication library for Axum with JWT and refresh tokens"
repository = "https://github.com/francis2tm/fast-auth"
keywords = ["auth", "authentication", "axum", "jwt", "web"]
categories = ["authentication", "web-programming"]
readme = "README.md"

[features]
default = []
testing = ["dep:reqwest"]

[dependencies]
tracing-config = { path = "../tracing-config" }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["cookie"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
jsonwebtoken = { version = "10", default-features = false, features = [
    "rust_crypto",
] }
argon2 = "0"
rand = "0"
sha2 = "0"
hex = "0"
chrono = { workspace = true }
time = "0"
uuid = { version = "1", features = ["v4", "serde"] }
email_address = "0"
reqwest = { workspace = true, features = ["json"], optional = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }
serial_test = { workspace = true }
tower = { workspace = true, features = ["util"] }
reqwest = { workspace = true, features = ["json"] }
