[package]
name = "fast-auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "A simple, extensible authentication library for Axum with JWT and refresh tokens"
repository = "https://github.com/francis2tm/fast-auth"
keywords = ["auth", "authentication", "axum", "jwt", "web"]
categories = ["authentication", "web-programming"]
readme = "README.md"

[features]
default = []
testing = ["dep:reqwest"]

[dependencies]
tracing-config = { path = "../tracing-config" }
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2" }
tracing = { version = "0" }
axum = { version = "0", features = ["macros"] }
axum-extra = { version = "0", features = ["cookie"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0" }
jsonwebtoken = { version = "10", default-features = false, features = [
    "rust_crypto",
] }
argon2 = "0"
rand = "0"
sha2 = "0"
hex = "0"
chrono = "0"
time = "0"
uuid = { version = "1", features = ["v4", "serde"] }
email_address = "0"
reqwest = { version = "0", features = ["json"], optional = true }
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }

[dev-dependencies]
test-utils = { version = "0", path = "../test-utils" }
serial_test = "3"
tower = { version = "0", features = ["util"] }
reqwest = { version = "0", features = ["json"] }
